[DO NOT MERGE][skip ci] JAVA 17 BWARE COMMIT